resources/experiment/0814-specgen/081401/Branched/log-Geofence_Mutant4-2025_08_15_10_08_06.txt
public class Geofence_Mutant4 {
    //@ requires limitX > 0 && limitY > 0;
    //@ ensures \result == 1 <==> (x <= 0 || x > limitX || y <= 0 || y > limitY);
    //@ ensures \result == 0 <==> (x > 0 && x <= limitX && y > 0 && y <= limitY);
    public static int geofence(int x, int y, int limitX, int limitY) {
        int alarm = 0;
        //@ maintaining alarm == 0 || alarm == 1;
        if (x <= 0 || x > limitX) {
            alarm = 1;
        }
        //@ maintaining alarm == 0 || alarm == 1;
        if (y <= 0 || y > limitY) {
            alarm = 1;
        }
        return alarm;
    }
}
==============================
/root/specgen/SpecGen/project/081401-specgen/tmp/Geofence_Mutant4.java:7: error: Loop specifications must immediately precede a loop statement
        //@ maintaining alarm == 0 || alarm == 1;
            ^
/root/specgen/SpecGen/project/081401-specgen/tmp/Geofence_Mutant4.java:11: error: Loop specifications must immediately precede a loop statement
        //@ maintaining alarm == 0 || alarm == 1;
            ^
2 errors

==============================
public class Geofence_Mutant4 {
    //@ requires limitX > 0 && limitY > 0;
    //@ ensures \result == 1 <==> (x <= 0 || x > limitX || y <= 0 || y > limitY);
    //@ ensures \result == 0 <==> (x > 0 && x <= limitX && y > 0 && y <= limitY);
    public static int geofence(int x, int y, int limitX, int limitY) {
        int alarm = 0;
        if (x <= 0 || x > limitX) {
            //@ assert alarm == 0;
            alarm = 1;
            //@ assert alarm == 1;
        }
        if (y <= 0 || y > limitY) {
            //@ assert alarm == 0 || alarm == 1;
            alarm = 1;
            //@ assert alarm == 1;
        }
        return alarm;
    }
}
==============================

==============================
